# blockScheme

./: CMakeLists.txt  main.cpp
language/example/: fibonacci.blc  squareFuncArea.blc
language/interpreter/: Process.cpp  Process.h
language/types/: blockTypes.cpp  blockTypes.h  expressionFolder.cpp  expressionFolder.h  expressionFolder.hpp
